# auster_aero

./: README.md  pyproject.toml
src/auster_aero/: __init__.py  geometry.py  visualization.py
test/: test_geometry.py  test_visualization.py
