[project]
name = "auster-aero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "joaopaulomcc-dev", email = "joaopaulomcc.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pint>=0.24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
